tests/negative/undefined_var.sans
// expect-error: undefined
main() I {
  x = y + 1
  x
}
